[tool.poetry]
name = "nemglo-gui"
version = "0.1.0"
description = ""
authors = ["dec-heim <92137442+dec-heim@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "nemglo_gui"}]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
nemed = "0.2.2"
nemosis = "*"
mip = "*"
flask = "^2.2.2"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
